Allow reconnect messages to be passed to connected clients
